immich/http-filter-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: http-filter-redirect
    namespace: immich
spec:
    hostnames:
        - photos.${SECRET_DOMAIN_0}
    parentRefs:
        - name: http-gateway
          sectionName: http
          namespace: kube-system
    rules:
        - filters:
            - type: RequestRedirect
              requestRedirect:
                scheme: https
                statusCode: 301
