immich/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: https-route
    namespace: immich
spec:
    hostnames:
        - photos.${SECRET_DOMAIN_0}
    parentRefs:
        - name: http-gateway
          sectionName: https
          namespace: kube-system
    rules:
        - backendRefs:
            - name: immich-server
              port: 2283
